# moodle-tui

./: .gitignore  Cargo.toml  Dockerfile.demo  README.md  docker-compose.local.yml  index.tsx  package.json
.github/workflows/: publish-npm.yml  release.yml
plugins/quiz-ai-extension/: README.md  plugin.js  plugin.json
scripts/: fetch-courses.ts  install.js  local_moodle_quiz_seed.php
src/: demo.rs  lib.rs  main.rs  models.rs  shortcuts.rs
src/components/: App.tsx  AssignmentModal.tsx  CourseContentFinderOverlay.test.ts  CourseContentFinderOverlay.tsx  CourseFinderOverlay.tsx  CoursePage.test.ts  CoursePage.tsx  Courses.tsx  Dashboard.test.ts  Dashboard.tsx  Login.tsx  MainShell.tsx  SettingsModal.tsx  TextInput.tsx  colors.ts  courseContentSearch.test.ts  courseContentSearch.ts  courseSearch.test.ts  courseSearch.ts  fuzzySearch.ts  shortcuts.test.ts  shortcuts.ts
src/moodle/: api.rs  assignments.rs  auth.rs  client.rs  courses.rs  html.rs  mod.rs  normalize.rs  quiz_html.rs  quizzes.rs  urls.rs
src/platform/: browser.rs  clipboard.rs  mod.rs
src/plugins/: manifest.rs  mod.rs  protocol.rs  registry.rs  runtime.rs
src/search/: content.rs  courses.rs  fuzzy.rs  mod.rs
src/storage/: cache.rs  config.rs  mod.rs  plugin_settings.rs  secret.rs  session.rs  tls.rs
src/ui/: assignment_modal.rs  content_finder.rs  course_tree.rs  dashboard.rs  login.rs  mod.rs  quiz_modal.rs  settings.rs  shared.rs  shell.rs  theme.rs
src/utils/: browser.test.ts  browser.ts  cache.test.ts  cache.ts  clipboard.test.ts  clipboard.ts  config.test.ts  config.ts  moodle.test.ts  (+3 more)
(+5 files in other folders)
