[package]
name = "moodle-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moodle"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tui-components = { git = "https://github.com/DenizCiger/tui-components", tag = "v0.1.7" }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-normalization = "0.1.24"
unicode-width = "0.2.2"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.23.0"
